added some pages

--- a/src/app.html
+++ b/src/app.html
@@ -5,8 +5,27 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
+		<title>Mood Tracker</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
+
+<style>
+
+/** General style **/
+
+html{
+	background-color: white;
+}
+
+body {
+	margin: 0px;
+}
+
+h1 {
+	margin-left: 10px;
+}
+
+</style>
