handling firebase errors & error banner

--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,11 @@
 		<!-- SMUI Styles -->
 		<link rel="stylesheet" href="/smui.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- Material Icons fonts -->
+		<link
+			href="https://fonts.googleapis.com/css2?family=Material+Icons&display=swap"
+			rel="stylesheet"
+		/>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
