--- a/src/app.html
+++ b/src/app.html
@@ -11,6 +11,8 @@
 			href="https://fonts.googleapis.com/css2?family=Material+Icons&display=swap"
 			rel="stylesheet"
 		/>
+		<!-- Material Symbols -->
+		<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" /> 
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
