add a lot of functionalities

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 		<title>Svelte Mood Tracker</title>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon1.svg" />
+		<link rel="manifest" type="application/manifest+json" href="app.webmanifest"/>
 		<!-- SMUI Styles -->
 		<link rel="stylesheet" href="/smui.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
