--- a/src/app.html
+++ b/src/app.html
@@ -3,8 +3,11 @@
 	<head>
 		<title>Svelte Mood Tracker</title>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon1.svg" />
-		<link rel="manifest" type="application/manifest+json" href="app.webmanifest"/>
+		<link rel="icon" href="/favicon.svg" />
+		<meta name="description" content="Track your mood">
+		<link rel="apple-touch-icon" href="/favicon.svg">
+		<link rel="mask-icon" href="/favicon.svg" color="#FFFFFF">
+		<meta name="theme-color" content="#1DE9B6">
 		<!-- SMUI Styles -->
 		<link rel="stylesheet" href="/smui.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
