--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="/favicon.svg" />
 		<meta name="description" content="Track your mood">
 		<link rel="apple-touch-icon" href="/favicon.svg">
-		<link rel="mask-icon" href="/favicon.svg" color="#FFFFFF">
+		<link rel="mask-icon" href="/favicon.svg" color="#000000">
 		<meta name="theme-color" content="#1DE9B6">
 		<!-- SMUI Styles -->
 		<link rel="stylesheet" href="/smui.css" />
@@ -24,7 +24,6 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
