--- a/src/app.html
+++ b/src/app.html
@@ -25,9 +25,9 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
-		<script href="src/main.ts" type="module"></script>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
