--- a/src/app.html
+++ b/src/app.html
@@ -28,6 +28,6 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
-		<script type="module" src="/src/main.ts"></script>
+		<script type="module" src="/main.ts"></script>
 	</body>
 </html>
