--- a/src/app.html
+++ b/src/app.html
@@ -28,6 +28,6 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
-		<script type="module" src="/main.ts"></script>
 	</body>
+	<!-- Service worker registration is handled by sveltekit /-->
 </html>
